<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HelloEverybodyActivity!</string>
    <string name="app_name">Hello Everybody</string>
    <string name="invite_activity_title">Inviter des contacts</string>
    <string name="preferences_activity_title">Préférences</string>
    <string name="age_preference_activity_title">Filtre sur une tranche d\'âge</string>
    <string name="send">Envoyer</string>
    <string name="avatar">Avatar</string>
    <string name="say">dit :</string>
    <string name="parameters">Paramètres</string>
    <string name="invite">Inviter</string>
    <string name="add_public_group">Créer un groupe publique</string>
    <string name="logout">Déconnexion</string>
    <string name="modify">Modifier</string>
    <string name="search">Rechercher</string>
    <string name="favorites">Favoris</string>
    <string name="favorite">Favori</string>
    <string name="not_favorite">Pas favori</string>
    <string name="known">Récents</string>
    <string name="near_me">Autres</string>
    <string name="recommended">Recommandés</string>
    <string name="opened_to_all">Publiques</string>
    <string name="pending">En cours</string>
    <string name="go_left">Aller à gauche</string>
    <string name="go_right">Aller à droite</string>
    <string name="given_name">Prénom</string>
    <string name="family_name">Nom de famille</string>
    <string name="years">ans</string>
    <string name="test">un texte un peu plus long pour le test de l edition du profil</string>
    <string name="cancel">Annuler</string>
    <string name="accept">Valider</string>
    <string name="join">Rejoindre</string>
    <string name="decline">Refuser</string>
    
    <string name="profile_situation">Situation</string>
    <string name="zero">00</string>
    <string name="close">Fermeture</string>

	<string name="type_to_filter">Rechercher...</string>
    <string name="chat">Chatter</string>    
    <string-array name="profile_relationship_status">
        <item >Célibataire</item>
        <item >En couple</item>
        <item >Non divulguée</item>
    </string-array>
    <string-array name="profile_sex_status">
        <item >Homme</item>
        <item >Femme</item>
    </string-array>
    <string name="interests">Centres d\'intérets</string>
    
    <string name="contacts_list">Liste de contacts</string>
    <string name="maximal_distance">Distance maximale</string>
    
    <string-array name="distances_values">
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    
    <string-array name="distances_names">
        <item>200 m</item>
        <item>500 m</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
    </string-array>
    <string name="contacts_visibility_up_to">Contacts visibles jusqu\'à</string>
    <string name="age_range">Tranche d\'âge</string>
    <string name="no_age_filter">Pas de filtre sur les âges</string>
    <string name="contacts_visibility_from">Contacts visibles de</string>
    <string name="to">à</string>
    <string name="years_old">ans</string>
    
    <string name="min_age_empty">L\'âge minimum ne doit pas être vide</string>
    <string name="max_age_empty">L\'âge maximum ne doit pas être vide</string>
    <string name="min_greater_than_max">L\'âge maximum doit être plus grand que l\'âge minimum</string>
    <string name="age_string">Les âges doivent être des entiers</string>
    <string name="age_error">Les valeurs des âges sont incorrects</string>
    
    <string name="avatar_title">Photo</string>
    
    <string-array name="avatar_actions">
        <item>Garder cette photo</item>
        <item>Supprimer la photo</item>
        <item>Changer de photo</item>
    </string-array>
    <string name="favori_add">Ajouter aux favoris</string>
    <string name="favori_delete">Retirer des favoris</string>
    <string name="known_delete">Retirer des récents</string>
    <string name="recommend_delete">Retirer des recommandés</string>
</resources>