<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/conversation_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@color/conversation_slide_bar"
        android:gravity="center">
        <ImageView
            android:id="@+id/go_left"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:contentDescription="@string/go_left"
            android:src="@android:drawable/ic_media_rew" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/conversation_title"
            android:text="Conversation"
            android:textSize="24px"
            android:paddingTop="2px"
            android:paddingBottom="2px" />
        
        <ImageView
            android:id="@+id/go_right"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:contentDescription="@string/go_right"
            android:src="@android:drawable/ic_media_ff" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/message_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:background="@color/conversation_slide_bar"
        >
        <EditText android:id="@+id/edit_text_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:inputType="textShortMessage"
        />
        <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
        />
	</LinearLayout>
	
</LinearLayout>